setup/k8s/02-infra/04-gzip-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gzip
  namespace: ingress-traefik
spec:
  compress: {}
