setup/k8s/02-infra/00-bind.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dns
  template:
    metadata:
      labels:
        app: dns
    spec:
      priorityClassName: infra-dns
      containers:
      - name: bind
        image: internetsystemsconsortium/bind9:9.18
        command: ["/bin/sh", "-c", "/usr/sbin/named -g > /var/log/stderr.log 2>&1"]
        ports:
        - name: dns-udp
          containerPort: 53
          protocol: UDP
        - name: dns-tcp
          containerPort: 53
          protocol: TCP
        securityContext:
          capabilities:
            add: ["NET_BIND_SERVICE"]
          runAsUser: 0
        volumeMounts:
        - name: configs
          mountPath: /etc/bind
          subPath: bind/config
        - name: configs
          mountPath: /var/log
          subPath: bind/log
        - name: dns-cache
          mountPath: /var/cache/bind
      volumes:
      - name: configs
        persistentVolumeClaim:
          claimName: configs-pvc
      - name: dns-cache
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: dns
  namespace: infra
spec:
  selector:
    app: dns
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      nodePort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      nodePort: 53
      protocol: TCP
  type: NodePort
  externalTrafficPolicy: Cluster
