setup/k8s/02-infra/02-default-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-backend
  template:
    metadata:
      labels:
        app: default-backend
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: default-backend-html

---
apiVersion: v1
kind: Service
metadata:
  name: default-backend
  namespace: infra
spec:
  selector:
    app: default-backend
  ports:
  - port: 80
    targetPort: 80
