setup/k8s/02-infra/02-default-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: default-backend
  namespace: infra
spec:
  entryPoints:
    - websecure
    - websecure-wan
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      priority: 1
      services:
        - name: default-backend
          port: 80
  tls: {}
