setup/k8s/02-infra/02-home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 64Mi
        volumeMounts:
        - name: content
          subPath: home
          mountPath: /usr/share/nginx/html
      volumes:
      - name: content
        persistentVolumeClaim:
          claimName: configs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: home
  namespace: infra
spec:
  selector:
    app: home
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-ingress
  namespace: infra
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - "dashboard.media.lan"
    secretName: media-lan-tls
  rules:
  - host: "dashboard.media.lan"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home
            port:
              number: 80
