setup/k8s/02-infra/03-default-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-backend
  template:
    metadata:
      labels:
        app: default-backend
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
        - name: config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: html-volume
        configMap:
          name: default-backend-html
          items:
            - key: index.html
              path: index.html
      - name: config-volume
        configMap:
          name: default-backend-html
          items:
            - key: default.conf
              path: default.conf
---
apiVersion: v1
kind: Service
metadata:
  name: default-backend
  namespace: infra
spec:
  selector:
    app: default-backend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: default-backend
  namespace: infra
spec:
  entryPoints:
    - web
    - websecure
    - websecure-wan
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      priority: 1
      services:
        - name: default-backend
          port: 80
  tls: {}
